fix ddt add to cart button missing padding on mobile

--- a/src/components/daily-deal-teaser/daily-deal-teaser.scss
+++ b/src/components/daily-deal-teaser/daily-deal-teaser.scss
@@ -295,9 +295,11 @@ $daily-deal-teaser_addtocart-min-width-laptop: 21rem !default;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-bottom: 1.5rem;
 
         @include media('>=tablet') {
             justify-content: flex-start;
+            padding-bottom: 0;
         }
 
         @include media('>=laptop') {
